www/_css/site.css
body{
	background-color: #000000;
	margin: 0px;
}

#main{
	margin-left: auto;
	margin-right: auto;
}

#header{
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	width: 300px;
	height: 60px;
	background-color: #222222;
	border-radius: 10px;
}

#logo{
	width: 300px;
	height: 26px;
	margin: 0px 10px 15px 10px;
	float: left;
	color: #ffffff;
	font-family: 'BauhausRegular';
	font-size: 36px;	
}

#sublogo{
	clear: left;
	color: #666666;
	margin: 10px;
	font-family: 'DINMediumRegular';
	font-size: 10px; 
}

#gallery{
	width: 300px;
	height: 178px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	background-color: #222222;
	border-radius: 10px;
}

#galleryimage{
	width: 280px;
	height: 158px;
	margin: 10px;
	float: left;
	background-color: #333333;
}

#videocontainer{
	width: 300px;
	height: 178px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	margin-bottom: 10px;
	background-color: #222222;
	border-radius: 10px;
}

#video{
	float: left;
	width: 280px;
	height: 158px;
	margin: 10px;
	background-color: #333333;
}

#videoframe{
	width: 280px;
	height: 158px;
	margin: 0px;
}

#container{
	margin-top: 10px;
	margin-left: auto;
	margin-right: auto;
	width: 300px;
}

#contentcontainer{
	width: 300px;
	margin: 10px auto;
	background-color: #222222;
	border-radius: 10px;
	overflow: hidden;
}

#contenttitle{
	margin: 10px 10px 0px 10px;
	color: #ffffff;
	font-family: 'DINMediumRegular';
	font-size: 14px;
	float: left;
}

#contentdate{
	clear: both;
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 10px;
	color: #666666;
	font-family: 'DINMediumRegular';
	font-size: 10px;
}

#contenttext{
	float: left;
	margin: 10px;
	color: #ffffff;
	font-family: 'DINLightRegular';
	font-size: 10px;
	text-align: justify;
    line-height: 1.2;
}

#contentlink{
	margin: 0px 10px 10px 10px;
	float: left;
	color: #ffffff;
	font-family: 'DINMediumRegular';
	font-size: 14px;
}

#bottom{
	float: left;
	width: 100%;
}

#footer{
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 10px;
	width: 300px;
	height: 36px;
	background-color: #222222;
	border-radius: 10px;
}

#copyright{
	float: left;
	color: #666666;
	margin: 12px 10px 0px 10px;
	font-family: 'DINMediumRegular';
	font-size: 10px; 
}

#socialmedia{
	float: left;
	margin: 10px 0px 0px 0px;
}

#praetorians{
	float: right;
	margin: 12px 10px 0px 5px;
	font-family: 'Arial';
	font-size: 10px; 
}

/* ITEMS ON FRONT PAGE */

div.item{
	float: left;
	width: 300px;
	height: 300px;
	margin-left: 5px;
	margin-right: 5px;
	margin-bottom: 10px;
	background-color: #222222;
	border-radius: 10px;
}

div.item:hover{
	cursor:pointer;
}

div.item:hover .thumb{
	filter: none;
  	-webkit-filter: grayscale(0%);
}

.thumb{
	width: 278px;
	height: 156px;
	margin: 10px;
	border: 1px solid #666666;
	float: left;
	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
  	filter: gray; /* IE6-9 */
  	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
}

div.title{
	margin-left: 10px;
	margin-right: 10px;
	color: #ffffff;
	font-family: 'DINMediumRegular';
	font-size: 14px;
}

div.date{
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 10px;
	color: #666666;
	font-family: 'DINMediumRegular';
	font-size: 10px;
}

div.description{
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 10px;
	color: #ffffff;
	font-family: 'DINLightRegular';
	font-size: 10px;
	text-align: justify;
    line-height: 1.2;
}

/* IMAGES */

div.slideshow{
	position:relative;
	width: 100%;
	height: 100%;
	display: none;
}

img.slide{
	position:absolute;
	left:0;
	top:0;
}

/* LINKS */

a{
	color: #00aaff;
	text-decoration: none;
}

a:hover{
	color: #00aaff;
	text-decoration: underline;
}

a:visited{
	color: #999999;
	text-decoration: none;
}

a:active{
	color: #ffffff;
}

a.hidden{
	color: #666666;
	text-decoration:none;
}

a.logo{
	color: #ffffff;
	text-decoration:none;	
}





/* MEDIA QUERY BREAKPOINTS */

@media only screen and (min-width: 640px) {		/* two */
	#header{
		width: 610px;
	}
	#gallery{
		width: 610px;
		height: 266px;
	}
	#galleryimage{
		width: 590px;
		height: 246px;
	}
	#container{
		width: 620px;
	}
	#footer{
		width: 610px;
	}
	#contentcontainer{
		width: 610px;
	}
	#contenttitle{
		font-size: 14px;
	}
	#contentdate{
		font-size: 10px;
	}
	#contenttext{
		font-size: 10px;
		-moz-column-count:2;
		-webkit-column-count:2;
		column-count:2;
		-moz-column-gap:30px;
		-webkit-column-gap:30px;
		column-gap:30px;
	}
	#contentlink{
		font-size: 14px;
	}
	#videocontainer{
		width: 610px;
	}
	#video{
		width: 590px;
	}
	#videoframe{
		width: 590px;
	}
}

@media only screen and (min-width: 960px) {		/* three */
	#header{
		width: 920px;
	}
	#gallery{
		width: 920px;
		height: 396px;
	}
	#galleryimage{
		width: 900px;
		height: 376px;
	}
	#container{
		width: 930px;
	}
	#footer{
		width: 920px;
	}
	#contentcontainer{
		width: 920px;
	}
	#contenttitle{
		font-size: 14px;
	}
	#contentdate{
		font-size: 10px;
	}
	#contenttext{
		font-size: 10px;
		-moz-column-count:3;
		-webkit-column-count:3;
		column-count:3;
		-moz-column-gap:30px;
		-webkit-column-gap:30px;
		column-gap:30px;
	}
	#contentlink{
		font-size: 14px;
	}
	#videocontainer{
		width: 920px;
	}
	#video{
		width: 900px;
	}
	#videoframe{
		width: 900px;
	}
}

@media only screen and (min-width: 1280px) {	/* four */
	#header{
		width: 1230px;
	}
	#gallery{
		width: 1230px;
		height: 526px;
	}
	#galleryimage{
		width: 1210px;
		height: 506px;
	}
	#container{
		width: 1240px;
	}
	#footer{
		width: 1230px;
	}
	#contentcontainer{
		width: 1230px;
	}
	#contenttitle{
		font-size: 18px;
	}
	#contentdate{
		font-size: 14px;
	}
	#contenttext{
		font-size: 14px;
	}
	#contentlink{
		font-size: 18px;
	}
	#videocontainer{
		width: 1230px;
	}
	#video{
		width: 1210px;
	}
	#videoframe{
		width: 1210px;
	}
}

@media only screen and (min-width: 1600px) {	/* five */
	#header{
		width: 1540px;
	}
	#gallery{
		width: 1540px;
		height: 656px;
	}
	#galleryimage{
		width: 1520px;
		height: 636px;
	}
	#container{
		width: 1550px;
	}
	#footer{
		width: 1540px;
	}
	#contentcontainer{
		width: 1540px;
	}
	#contenttitle{
		font-size: 24px;
	}
	#contentdate{
		font-size: 18px;
	}
	#contenttext{
		font-size: 18px;
	}
	#contentlink{
		font-size: 24px;
	}
	#videocontainer{
		width: 1540px;
	}
	#video{
		width: 1520px;
	}
	#videoframe{
		width: 1520px;
	}
}

@media only screen and (min-width: 1920px) {	/* six */
	#header{
		width: 1850px;
	}
	#gallery{
		width: 1850px;
		height: 796px;
	}
	#galleryimage{
		width: 1830px;
		height: 766px;
	}
	#container{
		width: 1860px;
	}
	#footer{
		width: 1850px;
	}
	#contentcontainer{
		width: 1850px;
	}
	#contenttitle{
		font-size: 24px;
	}
	#contentdate{
		font-size: 18px;
	}
	#contenttext{
		font-size: 18px;
	}
	#contentlink{
		font-size: 24px;
	}
	#videocontainer{
		width: 1850px;
	}
	#video{
		width: 1830px;
	}
	#videoframe{
		width: 1830px;
	}
}

@media print {
    * {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }
 }

